--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -745,6 +745,10 @@ nav{
     border-radius: 50%;
 }
 
+.videos__description{
+    margin-bottom: var(--mb-0-75);
+}
+
 .videos__title{
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-0-5);
